--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="wrapper">
               <div class="logo">
                 <img
-                  src="/assets/BrandAssets_Logos_01-Wordmark-removebg-preview.png"
+                  src="./assets/BrandAssets_Logos_01-Wordmark-removebg-preview.png"
                   alt=""
                 />
               </div>
@@ -115,7 +115,7 @@
           </h3>
         </div>
         <div class="tv-container">
-          <img src="/assets/tv.png" alt="" />
+          <img src="./assets/tv.png" alt="" />
           <video autoplay muted loop src="/assets/video-tv-in-0819.m4v"></video>
         </div>
       </div>
@@ -126,15 +126,15 @@
       <div class="download-show-section">
         <div class="image-container">
           <div>
-            <img src="/assets/mobile-0819.jpg" alt="" />
+            <img src="./assets/mobile-0819.jpg" alt="" />
           </div>
           <div class="download-section">
-            <img class="poster" src="/assets/boxshot.png" alt="" />
+            <img class="poster" src="./assets/boxshot.png" alt="" />
             <div>
               <p>Stranger Things</p>
               <p>Downloading...</p>
             </div>
-            <img class="loader-gif" src="/assets/download-icon.gif" alt="" />
+            <img class="loader-gif" src="./assets/download-icon.gif" alt="" />
           </div>
         </div>
         <div class="text-container">
@@ -165,7 +165,7 @@
         </div>
         <div class="tv-container">
             <div class="tv-wrapper">
-                <img src="/assets/device-pile-in.png" alt="">
+                <img src="./assets/device-pile-in.png" alt="">
                 <div class="video-wrapper" >
                     <video autoplay loop muted src="/assets/video-devices-in.m4v"></video>
                 </div>
@@ -179,7 +179,7 @@
     <!--* profile kids section -->
     <div class="profile-kids-section">
         <div class="image-container">
-          <img src="/assets/children-img.png" alt="">
+          <img src="./assets/children-img.png" alt="">
         </div>
         <div class="text-container">
           <h1>
