--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
         <div class="tv-container">
           <img src="./assets/tv.png" alt="" />
-          <video autoplay muted loop src="/assets/video-tv-in-0819.m4v"></video>
+          <video autoplay muted loop src="./assets/video-tv-in-0819.m4v"></video>
         </div>
       </div>
 
@@ -167,7 +167,7 @@
             <div class="tv-wrapper">
                 <img src="./assets/device-pile-in.png" alt="">
                 <div class="video-wrapper" >
-                    <video autoplay loop muted src="/assets/video-devices-in.m4v"></video>
+                    <video autoplay loop muted src="./assets/video-devices-in.m4v"></video>
                 </div>
             </div>
         </div>
